--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span>i</span>
         <span>o</span>
         <span>n</span>
-        <span>!</span>
+    
       
     </div>
     <div class="description">
-        <span> YA QUE HOY NO PODRE VERTE ESTE DETALLE ES PARA TI MI REINA DE OJITOS PRECIOSOS :)</span>
+        <span> Ya que hoy no podre verte este detalle es para ti mi reina de ojistos preciosos :)</span>
     </div>
     <div class="button">
         <button class="botones">
