--- a/index 21.html
+++ b/index 21.html
@@ -27,7 +27,7 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">CLICK AQUÍ</a>
+            <a href="flower.html" style="color: #fff;">CLICK AQUÍ SI TE FALLA</a>
         </button>
     </div>
 
