--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
     </div>
     <div class="description">
-        <span> Ya que hoy no podre verte este detalle es mi detalle para ti mi reina de ojitos preciosos :)</span>
+        <span> Ya que hoy no podre verte este detalle es para ti mi reina de ojitos preciosos :)</span>
     </div>
     <div class="button">
         <button class="botones">
